Revision history for Bb-Collaborate-Ultra

0.00.03 17th February 2017
        Added session logging classes:
        - Bb::Collaborate::Ultra::Log

0.00.02 20th December 2016
        Fixed thawing of data under Perl 5.10.1-

0.00.01	12th December 2016
        Initial release