@@ -7,7 +7,7 @@ use Mouse::Util::TypeConstraints;
 
 =head1 NAME
 
-Bb::Collaborate::Ultra::Session::Occurrence
+Bb::Collaborate::Ultra::Session::Log
 
 =head1 DESCRIPTION
 
@@ -19,12 +19,21 @@ See L<https://xx-csa.bbcollab.com/documentation#Session>
 
 =cut
     
-
 coerce __PACKAGE__, from 'HashRef' => via {
     __PACKAGE__->new( $_ )
 };
  
+__PACKAGE__->resource('instances');
 __PACKAGE__->load_schema(<DATA>);
+
+sub attendance {
+    my $self = shift;
+    my $connection = shift || $self->connection;
+    my $path = $self->path.'/attendees';
+    require Bb::Collaborate::Ultra::Session::Log::Attendee;
+    Bb::Collaborate::Ultra::Session::Log::Attendee->get($connection => {}, path => $path, parent => $self);
+}
+
 # **NOT DOCUMENTED** in https://xx-csa.bbcollab.com/documentation
 # schema has been reversed engineered
 1;
